kubernetes/apps/monitoring/signoz/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
spec:
  ingressClassName: internal
  rules:
    - host: "signoz.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signoz
                port:
                  number: 3301
  tls:
    - hosts:
        - "signoz.${SECRET_DOMAIN}"
